update escrito sintaxis

--- a/escrito.html
+++ b/escrito.html
@@ -75,24 +75,28 @@
             told me u wanted to be and u are gonna find your Tracey. I expect you to see “How i met your mother” to
             understand that reference cuz u also will understand why i told you i'm Robbin and u Ted, maybe u might not
             think as i am, maybe you have another Robbin in your mind but in my mind and my story it's like this (& the
-            cheese).<br><br>
+            cheese).
+            <br><br>
 
-            (Maybe when you read this all that I'm writing makes no sense but that is how I felt and still feeling…)<br><br>
+            (Maybe when you read this all that I'm writing makes no sense but that is how I felt and still feeling…)
+            <br><br>
 
             When you finish with the series you will understand why I always told you that I want to leave this city cuz
             it's something that Robbins do jejeje… I hope u to be happier than ever, love u A LOT, u can not believe me
-            but i will always love u.<br><br>
+            but i will always love u.
+            <br><br>
 
-            (Aquí iba algo que escribí pero me da pena jajaja, mejor cuando te entregue el primer escrito ahí lo lees)<br><br>
-
+            (Aquí iba algo que escribí pero me da pena jajaja, mejor cuando te entregue el primer escrito ahí lo lees)
+            <br><br>
             I don't want to confuse you, I'm just expressing my feelings. you just asked me this week if i would imagine
             us getting married, and my answer was “Yes, it wouldn't be weird”.
             Maybe I'm miss understanding things and I'm sorry if that's the case, I just want to let you know that I
             love you and with you my only purpose is to see you succeeding more goals and being loved the right way and
-            I don't care if it’s not with me. I have more things to say but let time find the place.<br><br>
-            De: Brandon Alan<br>
+            I don't care if it’s not with me. I have more things to say but let time find the place.
+            <br><br>
+            De: Brandon Alan
+            <br>
             Para: Liz (Elamordemivida)
-
         </p>
         <button class="submit-button">Clickeame</button>
     </div>
