--- a/escrito.html
+++ b/escrito.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escrito</title>
     <style>
-        body {
+        .bodyEscrito {
             font-family: Arial, sans-serif;
             background-color: #fffcec;
             margin: 0;
@@ -96,7 +96,7 @@
             <br><br>
             De: Brandon Alan
             <br>
-            Para: Liz (Elamordemivida)
+            Para: Liz
         </p>
         <button class="submit-button">Clickeame</button>
     </div>
