--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <br>
                     Para: Liz
                     <br>
-                    fecha: 05/Sept/2023
+                    Fecha: 05/Sept/2023
                 </p>
             </div>
         </div>
