--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <br><br>
                     De: Brandon Alan
                     <br>
-                    Para: Liz
+                    Para: Liz (elamordemivida)
                     <br>
                     Fecha: 05/Sept/2023
                 </p>
